@startuml
'https://plantuml.com/class-diagram

abstract class Database
abstract class Encryption
abstract class DataFormat
abstract class UserInterface

LocalDatabase --|> Database
SqliteDatabase --|> Database
LocalDatabase --> DataFormat
LocalDatabase --> MasterPassword
MasterPassword --> Encryption
AESEncrpytion --|> Encryption
XorEncryption --|> Encryption
App --> UserInterface
App --> Database
App --> MasterPassword
JSONDataFormat --|> DataFormat
CSVDataFormat --|> DataFormat
SwingUserInterface --|> UserInterface

@enduml